config file for server address

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,6 +23,7 @@
 	<script type="text/javascript" src="assets/js/libs/mousetrap.min.js"></script>
 	<script type="text/javascript" src="assets/js/functions.js"></script>
 	<script type="text/javascript" src="assets/js/app.js"></script>
+	<script type="text/javascript" src="assets/js/config.js"></script>
 	<script type="text/javascript" src="assets/js/searchbox-directive.js"></script>
 </body>
 </html>
