updated with search and add from url feature

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" type="text/css" href="assets/css/libs/bootstrap-dropdown.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-	<link href='//fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+	<link href="//fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
 	<title>playIT</title>
 </head>
 <body>
