--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,9 @@
 	<title>playIT</title>
 </head>
 <body>
-	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-	<script type="text/javascript" src="build/app.js"></script>
+    <div id="root">
+    </div>
+	<!--<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
+	<script src="/static/bundle.js"></script>
 </body>
 </html>
