--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link href="//fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet" type="text/css">
+	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<title>playIT</title>
 </head>
 <body>
     <div id="root">
     </div>
-	<!--<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>-->
 	<script src="/static/bundle.js"></script>
 </body>
 </html>
