--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,13 +2,13 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto:300">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:400,700,300,100">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 	<title>playIT</title>
 </head>
 <body>
-    <div id="root">
-    </div>
+    <div id="root"></div>
 	<script src="/static/bundle.js"></script>
 </body>
 </html>
